# recipe-app-api

./: .flake8  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: checks.yml
config/: calc.py  settings.py  tests.py  urls.py
guide/: README.md  docker-commands.md  quick-reference.md  setup-guide.md  troubleshooting.md
